no wrap in top nav fix

--- a/_sass/_custom_classes.scss
+++ b/_sass/_custom_classes.scss
@@ -1,7 +1,8 @@
 /*-----General styling-----*/
 
 @media (min-width: 992px) {
-    main h1:not(.has-subtitle):not(.blurb-title), main .h1:not(.has-subtitle) {
+    main h1:not(.has-subtitle):not(.blurb-title),
+    main .h1:not(.has-subtitle) {
         margin-top: -1rem;
     }
 }
@@ -30,15 +31,14 @@ li ul .sidebar_rdm_sub {
     margin-top: -0.25rem;
 }
 
-
 .sidebar-title {
-    border-bottom: 0.20rem solid $primary;
+    border-bottom: 0.2rem solid $primary;
     font-weight: bold;
-    padding-bottom: $input-btn-padding-y - 0.20rem;
+    padding-bottom: $input-btn-padding-y - 0.2rem;
 }
 
-#side-nav>ul {
-    margin-top: $spacer * .5;
+#side-nav > ul {
+    margin-top: $spacer * 0.5;
 }
 
 /* -----Homepage----- */
@@ -103,12 +103,11 @@ h2.card-title {
 
 /*-----Top navigation-----*/
 
-.navbar-nav .nav-item > a.active {
-    color: $white;
-    background-color: $primary;
-    border-radius: $border-radius;
+.navbar-nav .nav-item > a {
+    white-space: nowrap;
+    &.active {
+        color: $white;
+        background-color: $primary;
+        border-radius: $border-radius;
+    }
 }
-
-
-
-
